# eduquate

./: .env.dev.sample  .env.sample  .gitignore  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  apps.py  factories.py  managers.py  models.py
accounts/migrations/: 0001_initial.py
app/: Dockerfile  entrypoint.sh  requirements.txt
app/accounts/: admin.py  factories.py  forms.py  managers.py  models.py  schema.py  urls.py  views.py
app/accounts/migrations/: 0001_initial.py  0002_auto_20210314_1605.py  0003_auto_20210321_1108.py
app/api/: helpers.py  permissions.py  serializers.py  urls.py  views.py  viewsets.py
app/contacts/: forms.py  tasks.py  views.py
app/courses/: admin.py  apps.py  factories.py  models.py  schema.py  urls.py  views.py
app/eduquate/: celery.py  schema.py  settings.py  urls.py  wsgi.py
app/learning/: admin.py  models.py
app/templates/: 403.html  404.html  500.html  base.html  errors.html  index.html  unavailable.html
courses/: models.py
courses/migrations/: 0001_initial.py  0002_auto_20210215_0144.py  0003_auto_20210301_1201.py  0004_auto_20210303_0838.py
eduquate/: asgi.py  settings.py
learning/: admin.py  apps.py  models.py
learning/migrations/: 0001_initial.py  0002_auto_20210303_0838.py  0003_auto_20210303_0856.py  0004_auto_20210303_1313.py
react_frontend/: package.json
react_frontend/public/: index.html
react_frontend/src/: App.js  index.js
simple_front/: .babelrc  Dockerfile  package.json  webpack.config.js
simple_front/src/: index.html  index.js
(+44 files in other folders)
