[tool.poetry]
name = "eduquate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8.0"
Django = "^3.1.6"
Pillow = "^8.1.0"
factory-boy = "^3.2.0"
django-debug-toolbar = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
